// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input renders 1`] = `
<div
  class="column"
>
  <div
    class="marginBottom-2"
  >
    <label
      class="resetLabel"
      for="the-input"
    >
      <span
        class="
          medium
          boldFont
          color
        "
      >
        The input
      </span>
    </label>
  </div>
  <div
    class="default"
    data-testid="inputWrapper"
  >
    <input
      aria-invalid="false"
      class="input"
      id="the-input"
      type="text"
      value=""
    />
  </div>
</div>
`;

exports[`Input renders with a feedback state and icon 1`] = `
<div
  class="column"
>
  <div
    class="marginBottom-2"
  >
    <label
      class="resetLabel"
      for="the-input"
    >
      <span
        class="
          medium
          boldFont
          color
        "
      >
        The input
      </span>
    </label>
  </div>
  <div
    class="error"
    data-testid="inputWrapper"
  >
    <input
      aria-invalid="true"
      class="input"
      id="the-input"
      type="text"
      value=""
    />
    <div
      style="transition:opacity 100ms ease-in-out;opacity:1;"
    >
      <div
        class="marginLeft-3"
      >
        <i
          aria-hidden="true"
          class="icon icon-core-exclamation-point-circle"
        />
      </div>
    </div>
  </div>
</div>
`;
